--- a/workflow/01-county-metadata.Rmd
+++ b/workflow/01-county-metadata.Rmd
@@ -20,6 +20,7 @@ library("stringr")
 library("forcats")
 library("readr")
 library("ggplot2")
+library("maps")
 
 conflict_prefer("filter", "dplyr")
 ```
