--- a/workflow/99-publish.Rmd
+++ b/workflow/99-publish.Rmd
@@ -49,7 +49,7 @@ fs::file_copy(
 
 ```{r}
 fs::file_copy(
-  path_source("04-explore", "iowa_county_cases_week_current.csv"),
+  path_source("04-explore", "iowa_county_cases_week.csv"),
   path_target()
 )
 ```
