--- a/workflow/README.Rmd
+++ b/workflow/README.Rmd
@@ -15,7 +15,7 @@ In this workflow, we will:
 
 - [import](00-import.md):
    - daily snapshots of the [IDPH accessibility page](https://coronavirus.iowa.gov/pages/access)
-   - county metadata
+   - county population from [ICIP](https://www.icip.iastate.edu/tables/population/counties-estimates) at Iowa State University.
 - extract the [county metadata](01-county-metadata.md)
 - [scrape](02-scrape-idph.md) the data from the IDPH shapshots
 - [merge](03-merge.md) IDPH data
