--- a/README.Rmd
+++ b/README.Rmd
@@ -90,8 +90,8 @@ make_table <- function(.data, arr, n = 10, by = county) {
   head(n) %>%
   dplyr::transmute(
     {{ by }}, 
-    `daily pos. tests (week avg)` = round(cases_avg_week, 1),
-    `daily pos. tests per 100k (week avg)` = round(cases_avg_week_per100k, 1),
+    `daily positives (week avg)` = round(cases_avg_week, 1),
+    `daily positives per 100k (week avg)` = round(cases_avg_week_per100k, 1),
     `week-over-week change` = scales::label_percent(0.1)(cases_week_growth)
   ) %>%
   knitr::kable(align = "r")
