--- a/README.Rmd
+++ b/README.Rmd
@@ -114,19 +114,19 @@ For the most-populated counties:
 make_table(iowa_county_cases_week_current, desc(population))
 ```
 
-Most cases reported, per-capita:
+Most positive-tests, per-capita:
 
 ```{r}
 make_table(iowa_county_cases_week_current, desc(cases_avg_week_per100k))
 ```
 
-Most growth in cases, week-over-week:
+Most growth in positive-tests, week-over-week:
 
 ```{r}
 make_table(iowa_county_cases_week_current, desc(cases_week_growth))
 ```
 
-Biggest decline in cases, week-over-week:
+Biggest decline in positive-tests, week-over-week:
 
 ```{r}
 make_table(iowa_county_cases_week_current, cases_week_growth)
