--- a/workflow/99-publish.Rmd
+++ b/workflow/99-publish.Rmd
@@ -10,7 +10,7 @@ params:
 here::i_am(paste0(params$name, ".Rmd"), uuid = "da2d40a5-231f-404f-96ad-f86272f58669")
 ```
 
-The purpose of this document is ...
+The purpose of this document is to make data and images available.
 
 ```{r packages}
 library("conflicted")
