--- a/workflow/02-scrape-idph.Rmd
+++ b/workflow/02-scrape-idph.Rmd
@@ -10,7 +10,7 @@ params:
 here::i_am(paste0(params$name, ".Rmd"), uuid = "357772d2-af9d-4d6e-868f-3dc08773181c")
 ```
 
-The purpose of this document is ...
+The purpose of this document is to scrape the data from IDPH pages.
 
 ```{r packages}
 library("conflicted")
