--- a/README.Rmd
+++ b/README.Rmd
@@ -27,8 +27,10 @@ library("glue")
 library("dplyr")
 library("scales")
 library("lubridate")
+library("purrr")
 
 conflict_prefer("filter", "dplyr")
+conflict_prefer("lag", "dplyr")
 conflict_prefer("cols", "readr")
 conflict_prefer("col_character", "readr")
 conflict_prefer("col_date", "readr")
@@ -39,9 +41,6 @@ conflict_prefer("col_double", "readr")
 
 The goal of this repository is to give a county-level summary of COVID-19 cases in Iowa. 
 The data is taken from a series of daily snapshots of the [accessibility page](https://coronavirus.iowa.gov/pages/access) provided by the Iowa Department of Public Health.
-
-I think that, for this dataset, **cases** means positive *tests*, not positive *individuals*, as this [comment](https://github.com/nytimes/covid-19-data/issues/546#issuecomment-784247266) by the NYT data team indicates. 
-All I know is that small numbers are good and big numbers are bad.
 
 If you want to work with the data yourself, all the code I use is published this repository, check out the [`workflow`](workflow) directory. 
 Processed datasets are also available here:
@@ -101,9 +100,26 @@ make_table <- function(.data, arr, n = 10, by = county) {
 }
 ```
 
-## Tables as of `r unique(iowa_county_cases_week_current$date)`
+```{r}
+date_latest <- unique(iowa_county_cases_week_current$date)
+```
 
-I believe these numbers refer to positive tests, not to newly-reported positive individuals.
+## Tables as of `r date_latest`
+
+```{r}
+iowa_since_yesterday <- 
+  iowa_cases_week %>%
+  arrange(date) %>%
+  tail(2) %>%
+  transmute(
+    cases_new = cases_total - dplyr::lag(cases_total)
+  ) %>%
+  pluck("cases_new") %>%
+  pluck(2)
+```
+
+
+As of `r date_latest`, IPDH is reporting `r iowa_since_yesterday` new cases since the previous day.
 
 For the entire state, over the past week: 
 
@@ -117,19 +133,19 @@ For the most-populated counties:
 make_table(iowa_county_cases_week_current, desc(population))
 ```
 
-Most positive-tests, per-capita:
+Most positive-cases, per-capita:
 
 ```{r}
 make_table(iowa_county_cases_week_current, desc(cases_avg_week_per100k))
 ```
 
-Most growth in positive tests, week-over-week:
+Most growth in positive cases, week-over-week:
 
 ```{r}
 make_table(iowa_county_cases_week_current, desc(cases_week_growth))
 ```
 
-Biggest decline in positive tests, week-over-week:
+Biggest decline in positive cases, week-over-week:
 
 ```{r}
 make_table(iowa_county_cases_week_current, cases_week_growth)
