--- a/workflow/04-explore.Rmd
+++ b/workflow/04-explore.Rmd
@@ -159,7 +159,7 @@ gg_iowa_cases <-
     limits = c(0, NA)
   ) +
   labs(
-    title = glue("COVID-19 positive tests, seven-day average as of {date}"),
+    title = glue("COVID-19 positive cases, seven-day average as of {date}"),
     subtitle = "Data source: Iowa Department of Public Health",
     fill = "positives\nper 100k"
   )
@@ -183,7 +183,7 @@ gg_iowa_change <-
     labels = scales::label_percent()
   ) +
   labs(
-    title = glue("Week-over-week change in COVID-19 positive tests, as of {date}"),
+    title = glue("Week-over-week change in COVID-19 positive cases, as of {date}"),
     subtitle = "Data source: Iowa Department of Public Health",
     fill = "change"
   )  
