--- a/README.Rmd
+++ b/README.Rmd
@@ -29,6 +29,7 @@ library("scales")
 library("lubridate")
 library("purrr")
 
+conflict_prefer("pluck", "purrr")
 conflict_prefer("filter", "dplyr")
 conflict_prefer("lag", "dplyr")
 conflict_prefer("cols", "readr")
